--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.3.3
+  provider: ^6.1.2
+  fluttertoast: ^8.2.4
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
 
 flutter:
   uses-material-design: true
