--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   provider: ^6.1.2
   fluttertoast: ^8.2.4
   shared_preferences: ^2.2.3
+  file_picker: ^4.0.0
+  permission_handler: ^10.4.5
+  flutter_local_notifications: ^9.1.6
 
 dev_dependencies:
   flutter_test:
