--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   sqflite: ^2.3.3
   provider: ^6.1.2
+  intl: ^0.17.0
   fluttertoast: ^8.2.4
   shared_preferences: ^2.2.3
   file_picker: ^4.0.0
